Solution for font awsome icons, add some styles for them

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>My portfolio website</title>
         <link  rel="stylesheet" href="resources/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://kit.fontawesome.com/a463b98116.js" crossorigin="anonymous"></script>
         <script rel="stylesheet" src="resources/script.js"></script>
     </head>
     <body>
@@ -37,8 +38,8 @@
                 <h2>Skills</h2>
                 <div class="skill_container">
                 <i class="fa fa-html5"></i>
-                <i class="fa fa-css3-alt"></i>
-                <i class="fa fa-js"></i>
+                <i class="fa-brands fa-css3-alt"></i>
+                <i class="fab fa-js"></i>
                 <i class="fa fa-git"></i>
                 <i class="fa fa-github"></i>
                 <i class="fa fa-terminal"></i>
