Add photo, style and anchors.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
         <header>
             <h1>My name</h1>
             <nav>
-                <ul class="navigation">
-                    <li class="navigation_item">About Me</li>
-                    <li class="navigation_item">Projects</li>
-                    <li class="navigation_item">Skills</li>
-                    <li class="navigation_item">Contact</li>
+                <ul id="navigation_list" class="navigation">
+                    <li class="navigation_item"><a href="#">About Me</a></li>
+                    <li class="navigation_item"><a href="#">Projects</a></li>
+                    <li class="navigation_item"><a href="#">Skills</a></li>
+                    <li class="navigation_item"><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <main>
+            <img src="./resources/images/_bba0e058-210b-48b4-85f0-a1734f5902b7.jpeg">
             <div class="about_me">
             <h2>About me</h2>
             <p>I try to become web develeoper and this is the best way to do it. Learnig by doing it.</p>
@@ -30,8 +31,8 @@
             <div class="projects">
                 <h2>Projects</h2>
                 <ul class="projects_list">
-                    <li class="projects_list_item">Astrology club</li>
-                    <li class="projects_list_item">Favicon, Inc.</li>
+                    <li class="projects_list_item"><a href="https://nefertaum.github.io/astrologyclub/">Astrology club</a></li>
+                    <li class="projects_list_item"><a href="https://nefertaum.github.io/Favicon/">Favicon, Inc.</a></li>
                 </ul>
             </div>
             <div class="skills">
