Add style, images to projects, projects summary

--- a/index.html
+++ b/index.html
@@ -20,19 +20,37 @@
             </nav>
         </header>
         <main>
-            <img src="./resources/images/_bba0e058-210b-48b4-85f0-a1734f5902b7.jpeg">
-            <div class="about_me">
-            <h2>About me</h2>
-            <p>I try to become web develeoper and this is the best way to do it. Learnig by doing it.</p>
-            <br>
-            <p>I could definetly add here more but right now I'm doing my Front-end Developer course and don't have much project finished. </p>
-            <br>
+            <div class="about_me_container">
+                <div class="about_me">
+                    <h2>About me</h2>
+                    <p>I try to become web develeoper and this is the best way to do it. Learnig by doing it.</p>
+                    <br>
+                    <p>I could definetly add here more but right now I'm doing my Front-end Developer course and don't have much project finished. </p>
+                    <br>
+                </div>
+                <div class="about_me_image">
+                    <img src="./resources/images/_bba0e058-210b-48b4-85f0-a1734f5902b7.jpeg">
+                </div>
             </div>
             <div class="projects">
                 <h2>Projects</h2>
                 <ul class="projects_list">
-                    <li class="projects_list_item"><a href="https://nefertaum.github.io/astrologyclub/">Astrology club</a></li>
-                    <li class="projects_list_item"><a href="https://nefertaum.github.io/Favicon/">Favicon, Inc.</a></li>
+                    <li class="projects_list_item"><a href="https://nefertaum.github.io/astrologyclub/"><h3>Astrology club</h3></a></li>
+                        <ul class="Astrology_club_list">
+                            <li>This site is dedicated to fictive "Astrology club".</li>
+                            <li>I used HTML and CSS flex-box to achive responsive design</li>
+                        </ul>   
+                    <a href="https://nefertaum.github.io/astrologyclub/">
+                    <img alt="image of saturn" src="./resources/images/planets.avif">
+                    </a>
+                    <li class="projects_list_item"><a href="https://nefertaum.github.io/Favicon/"><h3>Favicon, Inc.</h3></a></li>
+                        <ul class="Favicon_list">
+                            <li>This is site about fictive cheese selling company.</li>
+                            <li>I used HTML and CSS to hone my skills</li>
+                        </ul>
+                    <a href="https://nefertaum.github.io/Favicon/">
+                    <img alt="image of gouda cheese" src="./resources/images/gouda 2.png">
+                    </a>
                 </ul>
             </div>
             <div class="skills">
@@ -49,6 +67,7 @@
         </main>
         <footer>
             <p>Made in EU</p>
+            <p>2025</p>
         </footer>
     </body>
     
