--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     <body>
         <header>
             <h1>My name</h1>
+            <label class="togle">
+             <button id="dark">Dark</button>
+            </label>
             <nav>
                 <ul id="navigation_list" class="navigation">
-                    <li class="navigation_item"><a href="#">About Me</a></li>
-                    <li class="navigation_item"><a href="#">Projects</a></li>
-                    <li class="navigation_item"><a href="#">Skills</a></li>
-                    <li class="navigation_item"><a href="#">Contact</a></li>
+                    <li class="navigation_item"><a href="./index.html">About me</a></li>
+                    <li class="navigation_item"><a href="#projects">Projects</a></li>
+                    <li class="navigation_item"><a href="#skills">Skills</a></li>
+                    <li class="navigation_item"><a href="./contacts.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -32,7 +35,7 @@
                     <img src="./resources/images/_bba0e058-210b-48b4-85f0-a1734f5902b7.jpeg">
                 </div>
             </div>
-            <div class="projects">
+            <div id="projects" class="projects">
                 <h2>Projects</h2>
                 <ul class="projects_list">
                     <li class="projects_list_item"><a href="https://nefertaum.github.io/astrologyclub/"><h3>Astrology club</h3></a></li>
@@ -53,7 +56,7 @@
                     </a>
                 </ul>
             </div>
-            <div class="skills">
+            <div id="skills" class="skills">
                 <h2>Skills</h2>
                 <div class="skill_container">
                 <i class="fa fa-html5"></i>
@@ -69,6 +72,7 @@
             <p>Made in EU</p>
             <p>2025</p>
         </footer>
+        
     </body>
     
 </html>
