--- a/contacts.html
+++ b/contacts.html
@@ -12,10 +12,10 @@
             <h1>My name</h1>
             <nav>
                 <ul id="navigation_list" class="navigation">
-                    <li class="navigation_item"><a href="./index.html">About me</a></li>
-                    <li class="navigation_item"><a href="./index.html">Projects</a></li>
-                    <li class="navigation_item"><a href="./index.html">Skills</a></li>
-                    <li class="navigation_item"><a href="./contacts.html">Contact</a></li>
+                    <li ><a class="navigation_item" href="./index.html">About me</a></li>
+                    <li ><a class="navigation_item" href="./index.html">Projects</a></li>
+                    <li ><a class="navigation_item" href="./index.html">Skills</a></li>
+                    <li ><a class="navigation_item" href="./contacts.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
