--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <link  rel="stylesheet" href="resources/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://kit.fontawesome.com/a463b98116.js" crossorigin="anonymous"></script>
-        <script rel="stylesheet" src="resources/script.js"></script>
     </head>
     <body>
         <header>
@@ -15,10 +14,10 @@
             </label>
             <nav>
                 <ul id="navigation_list" class="navigation">
-                    <li class="navigation_item"><a href="./index.html">About me</a></li>
-                    <li class="navigation_item"><a href="#projects">Projects</a></li>
-                    <li class="navigation_item"><a href="#skills">Skills</a></li>
-                    <li class="navigation_item"><a href="./contacts.html">Contact</a></li>
+                    <li><a class="navigation_item" href="./index.html">About me</a></li>
+                    <li><a class="navigation_item" href="#projects">Projects</a></li>
+                    <li><a class="navigation_item" href="#skills">Skills</a></li>
+                    <li><a class="navigation_item" href="./contacts.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -38,15 +37,15 @@
             <div id="projects" class="projects">
                 <h2>Projects</h2>
                 <ul class="projects_list">
-                    <li class="projects_list_item"><a href="https://nefertaum.github.io/astrologyclub/"><h3>Astrology club</h3></a></li>
+                    <li ><a class="projects_list_item" href="https://nefertaum.github.io/astrologyclub/"><h3>Astrology club</h3></a></li>
                         <ul class="Astrology_club_list">
                             <li>This site is dedicated to fictive "Astrology club".</li>
                             <li>I used HTML and CSS flex-box to achive responsive design</li>
                         </ul>   
-                    <a href="https://nefertaum.github.io/astrologyclub/">
+                    <a  href="https://nefertaum.github.io/astrologyclub/">
                     <img alt="image of saturn" src="./resources/images/planets.avif">
                     </a>
-                    <li class="projects_list_item"><a href="https://nefertaum.github.io/Favicon/"><h3>Favicon, Inc.</h3></a></li>
+                    <li ><a class="projects_list_item" href="https://nefertaum.github.io/Favicon/"><h3>Favicon, Inc.</h3></a></li>
                         <ul class="Favicon_list">
                             <li>This is site about fictive cheese selling company.</li>
                             <li>I used HTML and CSS to hone my skills</li>
@@ -72,7 +71,7 @@
             <p>Made in EU</p>
             <p>2025</p>
         </footer>
-        
+        <script rel="stylesheet" src="resources/script.js"></script>
     </body>
     
 </html>
