--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <br>
                 </div>
                 <div class="about_me_image">
-                    <img src="./resources/images/_bba0e058-210b-48b4-85f0-a1734f5902b7.jpeg">
+                    <img src="./resources/images/_bba0e058-210b-48b4-85f0-a1734f5902b7.jpeg" alt="AI generated image of half bald, IT guy in his midlife.">
                 </div>
             </div>
             <div id="projects" class="projects">
